Fixed tablet view and overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,6 @@ body {
   font-family: 'Rubik', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
 }
 
 code {
